# SimpleAAC

./: build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  espeak_jni.cpp
app/src/main/java/com/example/simpleaac/: DatabaseHelper.java  EspeakDataCopier.java  EspeakTTS.java  GridAdapter.java  Item.java  MainActivity.java
app/src/main/jni/: Android.mk
app/src/main/res/drawable/: fab_background.xml  ic_image_placeholder.xml  image_border.xml  round_button.xml
app/src/main/res/layout/: activity_main.xml  dialog_add_item.xml  grid_item.xml  toolbar.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
